--- a/index.html
+++ b/index.html
@@ -1,12 +1,92 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html lang="fr">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Run</title>
-</head>
-<body>
-    
-</body>
+    <!-- CDN Fontawesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="./assets/styles/styles.css" />
+  </head>
+  <body>
+    <main>
+      <div class="container">
+        <div>
+          <h1>Run</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur
+            obcaecati laudantium aut earum ex temporibus laborum, veniam tempora
+            odio explicabo consectetur ipsa nesciunt.
+          </p>
+          <a href="#" class="button">Get Started</a>
+        </div>
+        <div class="img-main"></div>
+      </div>
+    </main>
+
+    <section class="section-1">
+      <div class="img"></div>
+      <div class="container">
+        <div>
+          <h2>Magna etiam feugiat</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem ad
+            nihil perferendis assumenda molestiae, ipsa veniam obcaecati fugiat
+            repudiandae ratione ab qui ex a in, accusantium, facilis incidunt
+            aliquam non?
+          </p>
+          <a href="#" class="button">Learn More</a>
+        </div>
+      </div>
+    </section>
+
+    <section class="section-2">
+      <div class="container">
+        <div>
+          <h2>Tempus adipisicing</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem ad
+            nihil perferendis assumenda molestiae, ipsa veniam obcaecati fugiat
+            repudiandae ratione ab qui ex a in, accusantium, facilis incidunt
+            aliquam non?
+          </p>
+          <a href="#" class="button">Learn More</a>
+        </div>
+        <div class="img"></div>
+      </div>
+    </section>
+
+    <section class="contact">
+      <h2>Get In Touch</h2>
+      <form action="#">
+        <div class="form-grid">
+          <div>
+            <label for="name">Name</label>
+            <input type="text" id="name" />
+          </div>
+          <div>
+            <label for="email">Email</label>
+            <input type="email" id="email" />
+          </div>
+          <div>
+            <label for="message">Message</label>
+            <textarea id="message"></textarea>
+          </div>
+        </div>
+        <input type="submit" class="button" value="Send Message" />
+      </form>
+    </section>
+
+    <footer>
+        <ul>
+            <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+            <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+            <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+            <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+            <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+            <li><a href="#"><i class="far fa-envelope"></i></a></li>
+        </ul>
+    </footer>
+  </body>
 </html>
