--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
     <main>
       <div class="container">
         <div>
-          <h1>Run</h1>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur
-            obcaecati laudantium aut earum ex temporibus laborum, veniam tempora
-            odio explicabo consectetur ipsa nesciunt.
-          </p>
-          <a href="#" class="button">Get Started</a>
+            <h1>Run</h1>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur
+              obcaecati laudantium aut earum ex temporibus laborum, veniam tempora
+              odio explicabo consectetur ipsa nesciunt.
+            </p>
+            <a href="#" class="button">Get Started</a>
+          </div>
         </div>
-        <div class="img-main"></div>
-      </div>
+        <div class="img-banner"></div>
     </main>
 
     <section class="section-1">
