--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
           </p>
           <a href="#" class="button">Learn More</a>
         </div>
-        <div class="img"></div>
       </div>
+      <div class="img"></div>
     </section>
 
     <section class="contact">
@@ -69,7 +69,7 @@
             <label for="email">Email</label>
             <input type="email" id="email" />
           </div>
-          <div>
+          <div class="textarea">
             <label for="message">Message</label>
             <textarea id="message"></textarea>
           </div>
